@@ -1,3 +1,8 @@
+Description: Provide main Makefile for whole source tree
+ By design this patch is not needed to be sent upstream.
+Forwarded: not-needed
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+Last-Update: 2011-12-31
 --- /dev/null
 +++ b/Makefile
 @@ -0,0 +1,43 @@
