@@ -1,3 +1,10 @@
+Description: Fix build on Debian
+ By an unknown reason this patch currently is needed to
+ build nx-X11, nxcomp, nxcompshad and nxcompext with 
+ dpkg-buildpackage and debuild.
+Forwarded: not-needed
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+Last-Update: 2011-12-31
 --- a/nx-X11/programs/Xserver/Imakefile
 +++ b/nx-X11/programs/Xserver/Imakefile
 @@ -1047,7 +1047,7 @@
