@@ -1,3 +1,9 @@
+Description: FHS adaptation for Debian packaging
+ On Debian, NX libraries and binaries are installed to
+ /usr/lib/nx.
+Forwarded: not-needed
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+Last-Update: 2012-12-31
 --- a/nx-X11/config/cf/Imake.tmpl
 +++ b/nx-X11/config/cf/Imake.tmpl
 @@ -820,12 +820,12 @@
