@@ -1,8 +1,11 @@
-## dpatch by  <marceloshima@gmail.com>
-##
-## All lines beginning with `## DP:' are a description of the patch.
-## DP: Change the path to the keyboard configuration file
-
+Description: FHS path fix for rgb file
+ This patch is needed on Debian only, not reporting this path
+ addition to upstream.
+ .
+ Originally contributed by Marcelo Boveto Shima <marceloshima@gmail.com>.
+Forwarded: not-needed
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+Last-Update: 2011-12-31
 --- a/nx-X11/programs/Xserver/os/oscolor.c
 +++ b/nx-X11/programs/Xserver/os/oscolor.c
 @@ -53,7 +53,7 @@
