@@ -1,3 +1,10 @@
+Description: Prevent sending COMPOUND_TEXT
+ Do not send COMPOUND_TEXT to client.
+ .
+ Originally contributed by FreeNX Team (dimbor).
+Forwarded: not-yet
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+Last-Update: 2011-12-31
 --- a/nx-X11/programs/Xserver/hw/nxagent/Clipboard.c
 +++ b/nx-X11/programs/Xserver/hw/nxagent/Clipboard.c
 @@ -1226,10 +1226,11 @@
