@@ -1,3 +1,9 @@
+Description: Unbrand NX Agent Startup Screen
+ By design this patch is probably not interesting to
+ NX upstream.
+Forwarded: not-needed
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+Last-Update: 2012-12-31
 --- a/nx-X11/programs/Xserver/hw/nxagent/Screen.c
 +++ b/nx-X11/programs/Xserver/hw/nxagent/Screen.c
 @@ -1754,7 +1754,20 @@
