@@ -71,6 +71,8 @@ nx-libs (2:3.5.0-2) UNRELEASED; urgency=low
     - 008_add-nxproxy-wrapper.patch.
     - 011_add-nxauth-wrapper.patch.
   * Remove patch: 104_nxagent_enable_debug.patch, as it breaks package build.
+  * Add patch headers to all patch files, report most patches upstream. Waiting for
+    feedback and quotable URLs from NoMachine.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 28 Dec 2011 19:06:26 +0100
 
